<resources>
    <string name="app_name">TravelBug</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TravelBug</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_place">Places</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_holiday">Holidays</string>

    <string name="enter_a_holiday_name">Enter a holiday name</string>
    <string name="start_date">Start Date</string>
    <string name="start_date1">Start Date: </string>
    <string name="end_date">End Date</string>
    <string name="end_date1">End Date: </string>
    <string name="date_picker">Date Picker</string>
    <string name="remember_hint">What do you want to remember?</string>
    <string name="clear_all_holidays">Clear all holidays</string>
    <string name="nav_maps">Maps</string>
    <string name="Menu_holiday">holiday</string>
    <string name="Menu_place">place</string>
    <string name="enter_travel_buddies">Enter Travel Buddies</string>
    <string name="enter_a_place_name">Enter a place name</string>
    <string name="date">Date</string>
    <string name="enter_location">Enter a location</string>
    <string name="an_image_view_set_by_user">An image view set by user</string>
    <string name="add_image">Add Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="enter_a_photo_name">Enter a photo name</string>

    <string name="Menu_photo">photo</string>
    <string name="menu_photo">photo</string>
    <string name="menu_photos">Photos</string>
    <string name="listviewimage">ListViewImage</string>
    <string name="google_maps_API_key">AIzaSyBH41wZLc_0fN1BdxX_uCa4ION1gS8Uf6g</string>
    <string name="Enter_address">Enter Address, City or Post Code</string>
    <string name="clear_all_photos">Clear all photos</string>
    <string name="clear_all_places">Clear all places</string>
    <string name="show_visited_places">Show Visited Places</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_photo">Your photo</string>
    <string name="delete_photo">Delete Photo</string>
</resources>
