<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />

    <item android:title="Add or View">
        <group android:checkableBehavior="single">
            <menu>
                <item
                    android:id="@+id/nav_holiday"
                    android:icon="@drawable/ic_menu_holiday"
                    android:title="@string/menu_holiday" />
                <item
                    android:id="@+id/nav_place"
                    android:icon="@drawable/ic_location_on_black_24dp"
                    android:title="@string/menu_place" />
                <item
                    android:id="@+id/nav_photo"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_photos" />
            </menu>
        </group>
    </item>

    <item android:title="Find Nearby Places">
        <menu>
            <item
                android:id="@+id/nav_maps"
                android:icon="@drawable/ic_map_black_24dp"
                android:title="@string/nav_maps" />
        </menu>
    </item>

</menu>
