<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.travelapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_holiday"
        android:name="com.example.travelapp.ui.holiday.HolidayFragment"
        android:label="@string/menu_holiday"
        tools:layout="@layout/fragment_holiday">
        <action
            android:id="@+id/action_nav_holiday_to_holidayInput"
            app:destination="@id/holiday_input" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.travelapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.travelapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.travelapp.ui.maps.MapsFragment"
        android:label="@string/nav_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.travelapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.travelapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/holiday_input"
        android:name="com.example.travelapp.ui.holidayInput.HolidayInputFragment"
        android:label="Holiday"
        tools:layout="@layout/fragment_holiday_input">
        <action
            android:id="@+id/action_holidayInput_to_nav_holiday"
            app:destination="@id/nav_holiday" />
        <argument
            android:name="@string/Menu_holiday"
            android:defaultValue="@null"
            app:argType="com.example.travelapp.ui.holiday.Holiday"
            app:nullable="true" />
    </fragment>
</navigation>