<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.holidayInput.HolidayInputFragment">

    <EditText
        android:id="@+id/holidayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_a_holiday_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/enter_travel_buddies"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/holidayName"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_date" />

    <Button
        android:id="@+id/endDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/holidayName"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:text="@string/end_date" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateButton"
        android:layout_alignStart="@+id/dateButton"
        android:layout_alignEnd="@+id/dateButton"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:textAlignment="center"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/endDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endDateButton"
        android:layout_alignStart="@+id/endDateButton"
        android:layout_alignEnd="@+id/endDateButton"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:textAlignment="center"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/notesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/remember_hint"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
        android:maxLines="3" />

</RelativeLayout>