<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.holidayInput.HolidayInputFragment">

    <EditText
        android:id="@+id/photoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=" "
        android:ems="10"
        android:hint="@string/enter_a_photo_name"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/chosePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerPhoto"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:gravity="center|center_horizontal"
        android:text="@string/choose_photo" />

    <Button
        android:id="@+id/takePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chosePhotoButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:text="@string/take_photo" />

    <ImageView
        android:id="@+id/imageViewGallery"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/takePhotoButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/an_image_view_set_by_user"
        android:scaleType="centerInside" />

    <Spinner
        android:id="@+id/spinnerPhoto"
        android:layout_width="386dp"
        android:layout_height="0dp"
        android:layout_below="@+id/photoName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp" />
</RelativeLayout>